# configure-trackpoint

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure-trackpoint.desktop  configure-trackpoint.glade  configure-trackpoint.gladep  configure.in
po/: configure-trackpoint.pot
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  configure-trackpoint.h  interface.c  interface.h  main.c
